# wampy

./: .clang-format  .gitignore  .gitmodules  ALSA.md  BACKUP.md  BUILD.md  CMakeLists.txt  Dockerfile  Dockerfile.digital_clock  EQUALIZER-FILTERS.md  EQUALIZER_PER_SONG_SETTINGS.md  EQUALIZER_SETTINGS.md  GenerateVersion.cmake  INSTALL.md  LICENSE  MAKING_OF.md  MAKING_OF_EQUALIZER.md  MAKING_OF_EQUALIZER_FILTERS.md  MAKING_OF_FM.md  MAKING_OF_SOUND_SETTINGS.md  MAKING_OF_VIS.md  MAKING_OF_VOLUME_TABLES.md  Makefile  README.md  SOUND_SETTINGS.md  TODO.md  USAGE.md  VOLUME_TABLES.md  alsa.md  base-2.91.wsz  crosstool.armv7.config  kernel.md  not-done.md  suppressions.valgrind
.github/: FUNDING.yml
angry_about/: java.md  sepples.md  xda.md
cassette/: .gitignore  Makefile  atlas_config.py
digital_clock/: .gitignore  Dockerfile  Makefile  Makefile-segment  prepare.py  sort.py
dmp_feature/: .gitignore  Makefile  dmp_feature.cpp  dmp_feature.h
docs/: index.html
icons/: .gitignore  Makefile  README.md  run.sh
images/: promo-a30.xcf  promo-a40.xcf  promo-a50.xcf  promo-wm1z.xcf  promo-zx300.xcf  promo.md  promo.xcf  repository-open-graph-template.xcf  update-icon.md
installer/: .gitignore  init.wampy.rc  run.sh
libs/: .gitignore  Makefile  Makefile.llusbdac  Makefile.protobuf  Makefile.sysroot  config.kernel  etc2comp.patch  glfw.patch  imgui.patch  implot.patch  kernel.sh
libs/GLES2/: gl2.h  gl2platform.h
libs/alsa-lib/: .gitignore  Makefile
libs/glad/: README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/shine/: .gitignore  Makefile
misc/steam_mini_profile_to_reel/: .gitignore  Makefile  config.py
mockserver/: .gitignore  go.mod
mockserver/server/: server.go
pstserver/: .gitignore  Makefile  client.cpp  dmpclient.h  dmpconfig.h  main.cpp  pshm_ucase.h  pstconfig.h  test.cpp
server/: .gitignore  Makefile  README.md
server/armv5-unknown-linux-gnueabihf/: .gitignore  Controller.cpp  Controller.moc  Makefile  Provider.cpp  Provider.moc  command.pb.cc  command.pb.h  command.proto  command_names.cpp  command_names.h  garbage.cpp  hagoromoStatus.h  helpers.cpp  helpers.h  qeglfshooks_mt8590.cpp  qmake.conf  server.cpp  server.moc  wampy.cpp  wampy.h
sound_service_fw/: Dockerfile  Makefile  client.cpp  sound_service_fw.cpp  sound_service_fw.h
src/: INotifiable.h  Version.h.in  config.cpp  config.h  fontranges.h  imgui.config.h  imgui_curve.cpp  imgui_curve.h  imgui_widgets.cpp  imgui_widgets.h  implot_widgets.cpp  implot_widgets.h  main.cpp  playlist.h  shader.cpp  shader.h  skin.cpp  skin.h  skinElement.h  skinVariant.cpp  skinVariant.h  wstring.cpp  wstring.h
src/cassette/: README.md  cassette.cpp  cassette.h  config.cpp  config.h  tape.cpp  tape.h  tape_type.h
src/connector/: connector.h  hagoromo.cpp  hagoromo.h  hagoromoToString.cpp  hagoromoToString.h  mpd.cpp  mpd.h  song.cpp  song.h
src/dac/: cxd3778gf_common.h  cxd3778gf_table.cpp  cxd3778gf_table.h  dac.cpp  dac.h  main.cpp  plot.py
src/digital_clock/: config.h  digital_clock.cpp  digital_clock.h
src/langToString/: langToString.cpp  langToString.h  main.cpp
src/magick/: magick.cpp  magick.h
src/rec/: main.cpp  mp3.cpp  mp3.h  rec.cpp  rec.h  wav.cpp  wav.h
src/skin/: cassette.cpp  dac.cpp  debug.cpp  digiclock.cpp  eq.cpp  eqPerSong.cpp  eqTabs.cpp  fm.cpp  license.cpp  misc.cpp  volumeTables.cpp  w1.cpp  website.cpp  winamp.cpp
src/sound_settings/: sound_settings.cpp  sound_settings.h
src/sound_settings_fw/: sound_settings_fw.cpp  sound_settings_fw.h
src/unzip/: unzip.cpp
src/util/: direntry.h  dlog.h  mkpath.cpp  mkpath.h  util.cpp  util.h  util_string.cpp  util_string.h
src/w1/: w1.cpp  w1.h
src/winamp/: config.h  winamp.cpp  winamp.h
tl/: .gitignore  Makefile  locales.sh  wampy.pot
tl/po/: de.po  en.po  es.po  fr.po  it.po  ja.po  ko.po  pl.po  pt_BR.po  ru.po  vi.po  zh_CN.po  zh_TW.po
tunings/: .gitignore  Makefile  tunings.py  uniq.txt
uninstaller/: run.sh
vtewasm/: .gitignore  Makefile  Makefile.emscripten  editor.cpp  editor.h  main.cpp  shell_minimal.html
wampy-mock/: Makefile  README.md  go.sum  main.go
wampy-mock/server/: server.go
